packages/svelte/tests/validator/samples/rune-invalid-spread-state-raw/input.svelte
<script>
	const args = [0];
	const count = $state.raw(...args);
</script>