packages/svelte/tests/compiler-errors/samples/runes-props-illegal-name-2/main.svelte
<script>
	let props = $props();
	props.$$slots;
</script>
